# DepthRenderApproximator

./: .gitignore  README.md  main.cpp  matchcolors.py
data/: Depth02234_Theta207_Phi52.exr  Depth02234_Theta207_Phi52_S.exr
data/maxdepth100/: Depth38809_Theta165_Phi48.exr  Depth38809_Theta165_Phi48_S.exr
depth_grid_render/: CMakeLists.txt  CameraUtils.hpp  MeshBuilder.hpp  OBJWriter.hpp  XMLWriter.hpp  main.cpp  scene.xml
depth_grid_render/src/: CameraUtils.hpp  MeshBuilder.hpp  OBJWriter.hpp  OptionParser.hpp  UnderscoreString.hpp  XMLWriter.hpp  main.cpp  typedefs.hpp
depth_grid_render/src/test/: CMakeLists.txt  xmltest.cpp
depth_grid_render/test/: CMakeLists.txt
depth_poisson_render/: CMakeLists.txt  CMakeLists.txt2  CameraUtils.hpp  main.cpp
depth_poisson_render/data/: Depth57429_Theta334_Phi47.exr
docker/: Dockerfile  build_depthgrid.sh  build_depthgrid_docker.sh  run_depthgrid.sh
docker/addons/: Dockerfile
docker/mitsuba/: Dockerfile
docker/opencv/: Dockerfile
example_output/: 4017Unique_PARAM.txt  4017Unique_scene_gen.xml  4017Unique_scene_gen_directdiffuse.xml  4017Unique_scene_gen_directspec.xml  4017Unique_scene_gen_flipped.xml  4017Unique_scene_gen_spec.xml  4017Unique_scene_gen_tex.xml  4017Unique_scenewo_gen_directdiffuse.xml  4017Unique_scenewo_gen_directspec.xml  4017Unique_scenewo_gen_flipped.xml  4017Unique_scenewo_gen_spec.xml  4017Unique_scenewo_gen_tex.xml
quotient_image/: CMakeLists.txt  main.cpp
scripts/: runall.sh  runall_v3.sh
scripts_v2/: runall.sh  runall_gcloud.sh  runall_texonly.sh
